<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>UserWaypointDialog</class>
 <widget class="QDialog" name="UserWaypointDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>368</width>
    <height>237</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Little Navmap - Edit Position</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <property name="spacing">
    <number>2</number>
   </property>
   <item row="6" column="2">
    <widget class="QLabel" name="labelRouteUserWaypointCoordStatus">
     <property name="text">
      <string/>
     </property>
     <property name="textInteractionFlags">
      <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="labelRouteUserWaypointRegion">
     <property name="text">
      <string>&amp;Region:</string>
     </property>
     <property name="buddy">
      <cstring>lineEditRouteUserWaypointRegion</cstring>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QLineEdit" name="lineEditRouteUserWaypointIdent">
     <property name="toolTip">
      <string>Required ident of the waypoint.
A short all upper case ident without spaces is recommended.</string>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QLabel" name="labelRouteUserWaypointLatLon">
     <property name="text">
      <string>&amp;Latitude and Longitude:</string>
     </property>
     <property name="buddy">
      <cstring>lineEditRouteUserWaypointLatLon</cstring>
     </property>
    </widget>
   </item>
   <item row="2" column="2">
    <widget class="QLineEdit" name="lineEditRouteUserWaypointRegion">
     <property name="toolTip">
      <string>Optional two letter ICAO region of the waypoint.</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="labelRouteUserWaypointIdent">
     <property name="text">
      <string>&amp;Ident:</string>
     </property>
     <property name="buddy">
      <cstring>lineEditRouteUserWaypointIdent</cstring>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="labelRouteUserWaypointComment">
     <property name="text">
      <string>&amp;Remarks:</string>
     </property>
     <property name="buddy">
      <cstring>textEditRouteUserWaypointComment</cstring>
     </property>
    </widget>
   </item>
   <item row="5" column="2">
    <widget class="QLineEdit" name="lineEditRouteUserWaypointLatLon">
     <property name="toolTip">
      <string>Recognized coordinate formats:
- Degrees, minutes and seconds : N49° 26' 41.57&quot; E9° 12' 5.49&quot; or 49° 26' 41.57&quot; N 9° 12' 5.49&quot; E
- Degrees and minutes: N54* 16.82' W008* 35.95', N 52 33.58 E 13 17.26 or 49° 26.69' N 9° 12.09' E
- Degrees only: 49.4449° N 9.2015° E or N 49.4449° E 9.2015°
- Degrees with sign: 49.4449 9.2015. Negative is west or south. Order for latitude and longitude depends on option settings.
Degree, minute and second signs can be omitted for above formats.
Latitude has to be first and N/S and E/W designators are required.
A space is only needed to separate latitude and longitude or degrees/minutes/seconds if no signs used.
Other formats:
- Degrees and minutes: N44124W122451, N14544W017479 or S31240E136502
- Degrees only 46N078W
- Degrees and minutes 4620N07805W
- Degrees, minutes and seconds 481200N0112842E (SkyVector)
- Degrees and minutes in pair &quot;N6500 W08000&quot; or &quot;N6500/W08000&quot;
- NAT type 5020N
Formats above have to be given exactly as shown in the examples.</string>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="labelRouteUserWaypointName">
     <property name="text">
      <string>&amp;Name</string>
     </property>
     <property name="buddy">
      <cstring>lineEditRouteUserWaypointName</cstring>
     </property>
    </widget>
   </item>
   <item row="8" column="0" colspan="3">
    <widget class="QDialogButtonBox" name="buttonBoxRouteUserWaypoint">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
   <item row="7" column="2">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="3" column="2">
    <widget class="QLineEdit" name="lineEditRouteUserWaypointName">
     <property name="toolTip">
      <string>Waypoint name</string>
     </property>
    </widget>
   </item>
   <item row="4" column="2">
    <widget class="QTextEdit" name="textEditRouteUserWaypointComment">
     <property name="html">
      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
p, li { white-space: pre-wrap; }
&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="acceptRichText">
      <bool>false</bool>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>lineEditRouteUserWaypointIdent</tabstop>
  <tabstop>lineEditRouteUserWaypointRegion</tabstop>
  <tabstop>lineEditRouteUserWaypointName</tabstop>
  <tabstop>textEditRouteUserWaypointComment</tabstop>
  <tabstop>lineEditRouteUserWaypointLatLon</tabstop>
 </tabstops>
 <resources/>
 <connections/>
</ui>
